tests/baselines/reference/jsdocOverrideTag1.errors.txt
0.js(8,5): error TS99999: Annotated function was also inferred to be a type guard
0.js(27,5): error TS4119: This member must have a JSDoc comment with an '@override' tag because it overrides a member in the base class 'A'.
0.js(32,5): error TS4122: This member cannot have a JSDoc comment with an '@override' tag because it is not declared in the base class 'A'.
0.js(40,5): error TS4121: This member cannot have a JSDoc comment with an '@override' tag because its containing class 'C' does not extend another class.


==== 0.js (4 errors) ====
    class A {
    
        /**
         * @method
         * @param {string | number} a
         * @returns {boolean}
         */
        foo (a) {
        ~~~
!!! error TS99999: Annotated function was also inferred to be a type guard
            return typeof a === 'string'
        }
        bar () {
    
        }
    }
    
    class B extends A {
        /**
         * @override
         * @method
         * @param {string | number} a
         * @returns {boolean}
         */
        foo (a) {
            return super.foo(a)
        }
    
        bar () {
        ~~~
!!! error TS4119: This member must have a JSDoc comment with an '@override' tag because it overrides a member in the base class 'A'.
    
        }
    
        /** @override */
        baz () {
        ~~~
!!! error TS4122: This member cannot have a JSDoc comment with an '@override' tag because it is not declared in the base class 'A'.
    
        }
    }
    
    
    class C {
        /** @override */
        foo () {
        ~~~
!!! error TS4121: This member cannot have a JSDoc comment with an '@override' tag because its containing class 'C' does not extend another class.
    
        }
    }